[gd_scene load_steps=5 format=3 uid="uid://dav55o07vo3or"]

[ext_resource type="Script" path="res://Scripts/UI/UI.gd" id="1_23fgg"]
[ext_resource type="FontFile" uid="uid://bpvbpriimlfrk" path="res://Fonts/Kenney Mini.ttf" id="2_rikf6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tstxi"]
bg_color = Color(0.239216, 0.239216, 0.239216, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0c3t3"]
font = ExtResource("2_rikf6")
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_23fgg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tstxi")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Master volume text"
label_settings = SubResource("LabelSettings_0c3t3")

[node name="MasterVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -50.0
max_value = 0.0

[node name="AmbienceVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ambience volume text"
label_settings = SubResource("LabelSettings_0c3t3")

[node name="AmbienceVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -50.0
max_value = 0.0

[node name="ReturnButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_rikf6")
text = "Return"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/MasterVolumeSlider" to="." method="MasterVolumeSliderChanged"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/AmbienceVolumeSlider" to="." method="AmbienceVolumeSliderChanged"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ReturnButton" to="." method="Return"]
